tests/whole_screen/snapshots/whole_screen__native__ctrl_b_opens_the_running_list_during_a_turn_in_native_mode.snap
---
source: tests/whole_screen/native.rs
assertion_line: 661
expression: crate::unclocked(&window.picture())
---
60x24 cursor 23,0 scrollback 9
|│ ──────────────────────────────────────────────────────── │|
|│                                                          │|
|│ Tips                                                     │|
|│                                                          │|
|│ · /          opens the command list                      │|
|│ · \ enter    adds a line without sending                 │|
|│ · shift+tab  steps the permission mode                   │|
|│ · ctrl+c     clears the line typed so far                │|
|╰──────────────────────────────────────────────────────────╯|
|                                                            |
|› start it                                                  |
|                                                            |
|● Bash(sleep 30)                                            |
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)           |
|                                                            |
|                                                            |
|It is started. That is all.                                 |
|────────────────────────────────────────────────────────────|
|                                                            |
|Still running                                               |
|                                                            |
|› 1. Bash(sleep 30)   #s · 0 lines · 0 B                    |
|                                                            |
|esc to close · enter shows it · x stops it                  |
