tests/whole_screen/snapshots/whole_screen__native__ctrl_o_stands_at_the_foot_and_escape_leaves_no_row_of_it_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: opened
---
80x24 cursor 23,0 scrollback 27
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Read(gamma.txt)                                                                 |
|                                                                                |
|     1 gamma line 01                                                            |
|     2 gamma line 02                                                            |
|     3 gamma line 03                                                            |
|     4 gamma line 04                                                            |
|     5 gamma line 05                                                            |
|     6 gamma line 06                                                            |
|     7 gamma line 07                                                            |
|     8 gamma line 08                                                            |
|     9 gamma line 09                                                            |
|    10 gamma line 10                                                            |
|    11 gamma line 11                                                            |
|    12 gamma line 12                                                            |
|    13 gamma line 13                                                            |
|    14 gamma line 14                                                            |
|    15 gamma line 15                                                            |
|    16 gamma line 16                                                            |
|    17 gamma line 17                                                            |
|    18 gamma line 18                                                            |
|                                                                                |
|esc to close · ↑↓ pgup pgdn to see more · ←→ result 1 of 3                      |
