tests/whole_screen/snapshots/whole_screen__native__native_queue_sent_highlighted_now_in_ascii_at_40.snap
---
source: tests/whole_screen/native.rs
assertion_line: 972
expression: "crate::steadied_picture(&window.picture())"
---
40x48 cursor 30,20 scrollback 0
|CRUCIBLE                                |
|/.../workspace                          |
|                                        |
|> start it                              |
|                                        |
|* Bash(sleep 30)                        |
|  + (no... (+2 lines - ctrl+o to expand)|
|                                        |
|It is started. That is all.             |
|                                        |
|! stopped                               |
|                                        |
|> then run the whole gate               |
|                                        |
|It is started. That is all.             |
|                                        |
|| writing (0s - esc to interrupt)       |
|----------------------------------------|
|                                        |
|2 queued - ctrl+enter to send all now   |
|                                        |
|  and add a test for the windows path   |
|                                        |
|> check the ascii glyphs too            |
|                                        |
|^v to walk - ctrl+e to edit - ctrl+x to |
|delete - ctrl+s to send now             |
|                                        |
|                         99% window left|
|+--------------------------------------+|
|| > and the box last                   ||
|+--------------------------------------+|
|ask mode on    anthropic - claude-test-1|
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
