tests/whole_screen/snapshots/whole_screen__native__resume_divider_is_clipped_at_16_columns_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: "without_id(&window, &id)"
---
16x24 cursor 16,2 scrollback 0
|CRUCIBLE        |
|/…/workspace    |
|                |
|› /resume       |
|  ##############|
|  ##############|
|  ########      |
|                |
|── session r… ──|
|› say something |
|                |
|The first thing |
|this session    |
|said.           |
|                |
|                |
|›               |
| 99% window left|
|                |
|                |
|                |
|                |
|                |
|                |
